--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       - discovery.type=single-node
       - ES_JAVA_OPTS=-Xms1g -Xmx1g
     volumes:
-      - elasticsearch-data:/usr/share/dvolume/elasticsearch/data
+      - ./elasticsearch/data:/usr/share/elasticsearch/data
+      - ./elasticsearch/logs:/usr/share/elasticsearch/logs
     ports:
       - "9200:9200"
       - "9300:9300"
@@ -40,21 +41,171 @@ services:
     depends_on:
       - elasticsearch
 
-  thehive:
-    image: thehiveproject/thehive:latest
-    container_name: thehive
+   cassandra:
+    image: "cassandra:${cassandra_image_version}"
+    container_name: cassandra
+    hostname: cassandra
+    restart: unless-stopped
+    user: ${UID}:${GID}
     environment:
-      - THEHIVE_ELASTICSEARCH=http://elasticsearch:9200
-    ports:
-      - "9000:9000"
+      - CASSANDRA_CLUSTER_NAME=TheHive
+      - CASSANDRA_AUTHENTICATOR=PasswordAuthenticator
+      - CASSANDRA_NUM_TOKENS=4
+      - HEAP_NEWSIZE=1280M
+      - MAX_HEAP_SIZE=200M
+    volumes:
+      - ./cassandra/data:/var/lib/cassandra
+      - ./cassandra/logs:/var/log/cassandra
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+    # Prevent swap https://docs.docker.com/engine/containers/resource_constraints/#prevent-a-container-from-using-swap
+    memswap_limit: 2G
     networks:
       - elk
-    depends_on:
-      - elasticsearch
+    healthcheck:
+      # Waiting for cqlsh command to succeed to make sure Cassandra is ready
+      test: ["CMD-SHELL", "cqlsh -u cassandra -p cassandra -e 'describe keyspaces' || exit 1"]
+      start_period: 120s
+      interval: 2s
+      timeout: 1s
+      retries: 3
+    labels:
+      com.strangebee.stack: "thehive-cortex-stack"
+      com.strangebee.service: "cassandra"
+      com.strangebee.role: "database"
+      com.strangebee.environment: "testing"
+      com.strangebee.version: "${cassandra_image_version}"
+      com.strangebee.dependency: "None"
 
-volumes:
-  elasticsearch-data:
-    driver: local
+  thehive:
+    image: "strangebee/thehive:${thehive_image_version}"
+    container_name: thehive
+    hostname: thehive
+    restart: unless-stopped
+    command: '--no-config --no-config-secret'
+    user: ${UID}:${GID}
+    environment:
+      - |
+        JAVA_OPTS=
+          -Xms1280M
+          -Xmx1280M
+          -XX:MaxMetaspaceSize=400m
+          -XX:ReservedCodeCacheSize=250m
+    volumes:
+      - ./thehive/config:/etc/thehive:ro
+      - ./thehive/data/files:/opt/thp/thehive/files
+      - ./thehive/logs:/var/log/thehive
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+    memswap_limit: 2G
+    networks:
+      - elk
+    ports:
+      - '0.0.0.0:9000:9000'
+    healthcheck:
+      test: ["CMD-SHELL", "curl -s -f thehive:9000/thehive/api/status || exit 1"]
+      start_period: 40s
+      interval: 10s
+      timeout: 1s
+      retries: 5
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+      cassandra:
+        condition: service_healthy
+    labels:
+      com.strangebee.stack: "thehive-cortex-stack"
+      com.strangebee.service: "thehive"
+      com.strangebee.role: "application"
+      com.strangebee.environment: "testing"
+      com.strangebee.version: "${thehive_image_version}"
+      com.strangebee.dependency: "elasticsearch, cassandra"
+
+  cortex:
+    image: "thehiveproject/cortex:${cortex_image_version}"
+    container_name: cortex
+    hostname: cortex
+    restart: unless-stopped
+    environment:
+      - |
+        JAVA_OPTS=
+          -Xms1000M
+          -Xmx1000M
+          -XX:MaxMetaspaceSize=400m
+          -XX:ReservedCodeCacheSize=250m
+      - es_uri=http://elasticsearch:9200
+      - job_directory=/tmp/cortex-jobs
+      - docker_job_directory=${cortex_docker_job_directory}
+    volumes:
+      # Mounting docker socket in the container so that cortex can run jobs as containers
+      - /var/run/docker.sock:/var/run/docker.sock
+      # Storing jobs under /tmp for now
+      - ./cortex/cortex-jobs:/tmp/cortex-jobs
+      - ./cortex/config:/etc/cortex:ro
+      - ./cortex/logs:/var/log/cortex
+      - ./cortex/neurons:/opt/cortexneurons
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+    memswap_limit: 2G
+    networks:
+      - elk
+    ports:
+      - '0.0.0.0:9001:9001'
+    healthcheck:
+      test: ["CMD-SHELL", "curl -s -f cortex:9001/cortex/api/status || exit 1"]
+      start_period: 40s
+      interval: 10s
+      timeout: 1s
+      retries: 5
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+    labels:
+      com.strangebee.stack: "thehive-cortex-stack"
+      com.strangebee.service: "cortex"
+      com.strangebee.role: "application"
+      com.strangebee.environment: "testing"
+      com.strangebee.version: "${cortex_image_version}"
+      com.strangebee.dependency: "elasticsearch"
+
+  nginx:
+    image: "nginx:${nginx_image_version}"
+    container_name: nginx
+    hostname: nginx
+    restart: unless-stopped
+    environment:
+      SERVER_NAME: "${nginx_server_name}"
+      NGINX_SSL_TRUSTED_CERTIFICATE: "${nginx_ssl_trusted_certificate}"
+    volumes:
+      - ./nginx/templates:/etc/nginx/templates  # Custom Nginx configuration
+      - ./nginx/certs:/etc/nginx/certs  # Directory for custom certificates
+    ports:
+      - '443:443'
+    networks:
+      - elk
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '1.000'
+    depends_on:
+      - thehive
+      - cortex
+    labels:
+      com.strangebee.stack: "thehive-cortex-stack"
+      com.strangebee.service: "nginx"
+      com.strangebee.role: "reverse proxy"
+      com.strangebee.environment: "testing"
+      com.strangebee.version: "${nginx_image_version}"
+      com.strangebee.dependency: "thehive, cortex"
+
+
 
 networks:
   elk:
